--- a/app/src/main/res/layout/homeowner_dashboard.xml
+++ b/app/src/main/res/layout/homeowner_dashboard.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:text="Edit User Information" />
 
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -28,7 +34,6 @@
 
     </LinearLayout>
 
-
     <ListView
         android:id="@+id/listViewViolations"
         android:layout_width="match_parent"
@@ -36,5 +41,7 @@
 
 
     </ListView>
+
+
 
 </LinearLayout>
