--- a/app/src/main/res/layout/signup_choice.xml
+++ b/app/src/main/res/layout/signup_choice.xml
@@ -26,7 +26,7 @@ tools:visibility="visible">
         android:layout_height="47dp"
         android:layout_marginTop="108dp"
         android:background="@android:color/transparent"
-        android:text="As Homeowner"
+        android:text="Homeowner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@ tools:visibility="visible">
     android:layout_height="47dp"
     android:layout_marginBottom="422dp"
     android:background="@android:color/transparent"
-    android:text="As Garbage Collector"
+    android:text="Garbage Collector"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/homeowner_signup" />
