--- a/app/src/main/res/layout/homeowner_registration.xml
+++ b/app/src/main/res/layout/homeowner_registration.xml
@@ -61,6 +61,19 @@
         app:layout_constraintTop_toBottomOf="@id/homeowner_password_edittext"
         app:layout_constraintLeft_toLeftOf="@id/homeowner_password_edittext" />
 
+    <Button
+        android:id="@+id/homeowner_map_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="onClick"
+
+        android:text="@string/map"
+        app:layout_constraintTop_toBottomOf="@id/homeowner_password_edittext"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <EditText
         android:id="@+id/homeowner_phone_number_edittext"
         style="@style/EditTextTheme"
